# kitsunview

./: .gitmodules  CMakeLists.txt
example/: example.cpp
firstparty/: CMakeLists.txt
include/N1ghtTheF0x/: Kitsunview.hpp
include/N1ghtTheF0x/Kitsunview/: Window.hpp
source/: window.cpp  window_win32.cpp
